tests/ui/feature-gates/feature-gate-cfg-target-has-atomic-equal-alignment.stderr
error[E0658]: `cfg(target_has_atomic_equal_alignment)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic-equal-alignment.rs:2:10
   |
LL |     cfg!(target_has_atomic_equal_alignment = "8");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #93822 <https://github.com/rust-lang/rust/issues/93822> for more information
   = help: add `#![feature(cfg_target_has_atomic_equal_alignment)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_has_atomic_equal_alignment)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic-equal-alignment.rs:4:10
   |
LL |     cfg!(target_has_atomic_equal_alignment = "16");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #93822 <https://github.com/rust-lang/rust/issues/93822> for more information
   = help: add `#![feature(cfg_target_has_atomic_equal_alignment)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_has_atomic_equal_alignment)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic-equal-alignment.rs:6:10
   |
LL |     cfg!(target_has_atomic_equal_alignment = "32");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #93822 <https://github.com/rust-lang/rust/issues/93822> for more information
   = help: add `#![feature(cfg_target_has_atomic_equal_alignment)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_has_atomic_equal_alignment)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic-equal-alignment.rs:8:10
   |
LL |     cfg!(target_has_atomic_equal_alignment = "64");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #93822 <https://github.com/rust-lang/rust/issues/93822> for more information
   = help: add `#![feature(cfg_target_has_atomic_equal_alignment)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_has_atomic_equal_alignment)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic-equal-alignment.rs:10:10
   |
LL |     cfg!(target_has_atomic_equal_alignment = "128");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #93822 <https://github.com/rust-lang/rust/issues/93822> for more information
   = help: add `#![feature(cfg_target_has_atomic_equal_alignment)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(target_has_atomic_equal_alignment)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic-equal-alignment.rs:12:10
   |
LL |     cfg!(target_has_atomic_equal_alignment = "ptr");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #93822 <https://github.com/rust-lang/rust/issues/93822> for more information
   = help: add `#![feature(cfg_target_has_atomic_equal_alignment)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
